fixed copyright text spacing at the bottom of the footer

--- a/frontend/src/styles/FooterLarge.css
+++ b/frontend/src/styles/FooterLarge.css
@@ -12,7 +12,7 @@ bottom: 0; 	height: 20%;
 	color: white;
 	display: flex;
   	flex-direction: row;
-	height: 170px;
+	height: 100%;
 
 
     /* flex-wrap: wrap; */
